--- a/goit-fe-course/module-01-02/hw-01-02/index.html
+++ b/goit-fe-course/module-01-02/hw-01-02/index.html
@@ -5,41 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<header>
-    <nav>
-        <ul>
-            <li><a href="#">lifestyle</a></li>
-            <li><a href="#">photodiary</a></li>
-            <li><a href="#">music</a></li>
-            <li><a href="#">travel</a></li>
-        </ul>
-    </nav>
-</header>
+
 </head>
+
+
+
 <body>
-    <img src="img\hw-01.png" alt="dance">
+
+        <header>
+                <nav>
+                    <ul>
+                        <li><a href="#">lifestyle</a></li>
+                        <li><a href="#">photodiary</a></li>
+                        <li><a href="#">music</a></li>
+                        <li><a href="#">travel</a></li>
+                    </ul>
+                </nav>
+            </header>
+<main>
+    <p></p>
+    <img src="img\hw-01.png" alt="dance" width="420" height="280">
     <p>Lifestyle</p>
     <h2>More than just a music festival</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt distinctio qui, placeat nam consequuntur ullamaccusamus nisi nostrum dolores numquam at, velit possimus doloremque earum obcaecati id porro reprehenderit eaque quaerat saepe atque eligendi, pariatur inventore cum. A dolor saepe perferendis, quasi assumenda reichiendis delectus quia est non, numquam officiis repellat placeat nihil aperiam repellendus sunt laudantium ad exercitationem in aliquid id, nemo nam totem. Ispum dolore exercitationem, non delectus modi debitis repudiandae! Ipsa quasi totam voluptatibus voluptates! Architecto, expedita laboriosam quidem explicabo deleniti ducimus, hic exercitationem sed autem rerum harum dignissimos nam, nulla nobis magni quod doloremque repellendus molestiae?</p>
 
-    <img src="img/hw-02.png" alt="coffeedrink">
+    <p></p>
+    <img src="img/hw-02.png" alt="coffeedrink" width="420" height="280">
     <p>lifestyle</p>
     <h2>Life tastes better with coffee</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt distinctio qui, placeat nam consequuntur ullamaccusamus nisi nostrum dolores numquam at, velit possimus doloremque earum obcaecati id porro reprehenderit eaque quaerat saepe atque eligendi, pariatur inventore cum. A dolor saepe perferendis, quasi assumenda reichiendis delectus quia est non, numquam officiis repellat placeat nihil aperiam repellendus sunt laudantium ad exercitationem in aliquid id, nemo nam totem. Ispum dolore exercitationem, non delectus modi debitis repudiandae! Ipsa quasi totam voluptatibus voluptates! Architecto, expedita laboriosam quidem explicabo deleniti ducimus, hic exercitationem sed autem rerum harum dignissimos nam, nulla nobis magni quod doloremque repellendus molestiae?</p>
 
-    <img src="img/hw-03.png" alt="background of the bridge">
+    <p></p>
+    <img src="img/hw-03.png" alt="background of the bridge" width="420" height="280">
     <p>photodiary</p>
     <h2>American dream</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt distinctio qui, placeat nam consequuntur ullamaccusamus nisi nostrum dolores numquam at, velit possimus doloremque earum obcaecati id porro reprehenderit eaque quaerat saepe atque eligendi, pariatur inventore cum. A dolor saepe perferendis, quasi assumenda reichiendis delectus quia est non, numquam officiis repellat placeat nihil aperiam repellendus sunt laudantium ad exercitationem in aliquid id, nemo nam totem. Ispum dolore exercitationem, non delectus modi debitis repudiandae! Ipsa quasi totam voluptatibus voluptates! Architecto, expedita laboriosam quidem explicabo deleniti ducimus, hic exercitationem sed autem rerum harum dignissimos nam, nulla nobis magni quod doloremque repellendus molestiae?</p>
 
-    <img src="img/hw-04.png" alt="human">
+    <p></p>
+    <img src="img/hw-04.png" alt="human" width="420" height="280">
     <p>photodiary</p>
     <h2>A day exploring the Alps</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt distinctio qui, placeat nam consequuntur ullamaccusamus nisi nostrum dolores numquam at, velit possimus doloremque earum obcaecati id porro reprehenderit eaque quaerat saepe atque eligendi, pariatur inventore cum. A dolor saepe perferendis, quasi assumenda reichiendis delectus quia est non, numquam officiis repellat placeat nihil aperiam repellendus sunt laudantium ad exercitationem in aliquid id, nemo nam totem. Ispum dolore exercitationem, non delectus modi debitis repudiandae! Ipsa quasi totam voluptatibus voluptates! Architecto, expedita laboriosam quidem explicabo deleniti ducimus, hic exercitationem sed autem rerum harum dignissimos nam, nulla nobis magni quod doloremque repellendus molestiae?</p>
 
     <p>
-        <input type="button" value="load more">
+        <button>load more</button>
     </p>
-    
+</main>
 </body>
 </html>
