--- a/goit-fe-course/module-01-02/hw-01-02/index.html
+++ b/goit-fe-course/module-01-02/hw-01-02/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,12 +23,12 @@
                 </nav>
             </header>
 <main>
-    <article></article>
+    <article>
     <img src="hw-01.png" alt="dance" width="607" height="405">
     <p>Lifestyle</p>
     <h2>More than just a music festival</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt distinctio qui, placeat nam consequuntur ullamaccusamus nisi nostrum dolores numquam at, velit possimus doloremque earum obcaecati id porro reprehenderit eaque quaerat saepe atque eligendi, pariatur inventore cum. A dolor saepe perferendis, quasi assumenda reichiendis delectus quia est non, numquam officiis repellat placeat nihil aperiam repellendus sunt laudantium ad exercitationem in aliquid id, nemo nam totem. Ispum dolore exercitationem, non delectus modi debitis repudiandae! Ipsa quasi totam voluptatibus voluptates! Architecto, expedita laboriosam quidem explicabo deleniti ducimus, hic exercitationem sed autem rerum harum dignissimos nam, nulla nobis magni quod doloremque repellendus molestiae?</p>
-
+</article>
 <article>
     <img src="hw-02.png" alt="coffeedrink" width="604" height="393">
     <p>lifestyle</p>
