--- a/module-03/hw-03/index.html
+++ b/module-03/hw-03/index.html
@@ -76,7 +76,7 @@
                 </p>
             </li>
             <li class="content-list-item">
-                <img class="image1" src="img/hw-06.png" alt="winter road" width="420" height="280">
+                <img class="image" src="img/hw-06.png" alt="winter road" width="420" height="280">
                 <p class="paragraph">Lifestyle</p>
                 <h3 class="heading">Cold winter days</h3>
                 <p class="paragraph">
