--- a/module-04/hw-04/index.html
+++ b/module-04/hw-04/index.html
@@ -7,8 +7,8 @@
     <title>Homework_4</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:600" rel="stylesheet">
 </head>
 
 <body>
@@ -17,10 +17,10 @@
 <!--Header-->        
         <header class="header">
             <nav class="navigation">
-                <h1 class="site-logo"><a class="logo" href="a">MART</a></h1>
+                <a class="logo" href="a">mart</a>
 
-
-                <ul class="navigate">
+            <div class="navigate">
+                <ul class="clearfix">
                     <li class="features-list"><a class="link" href="#home" target="_self">home</a></li>
                     <li class="features-list"><a class="link" href="#about" target="_self">about us</a></li>
                     <li class="features-list"><a class="link" href="#page" target="_self">page</a></li>
@@ -28,6 +28,7 @@
                     <li class="features-list"><a class="link" href="#blog" target="_self">blog</a></li>
                     <li class="features-list"><a class="link" href="#contact" target="_self">contact us</a></li>
                 </ul>
+            </div>
             </nav>
         </header>
 
@@ -35,81 +36,97 @@
         <main class="content">
             <section class="products">
                 <h2 class="products-title">featured products</h2>
-                <ul class="products-list">
-                    <li class="products-list-item">
+                <ul class="products-list clearfix">
+                    <li>
                         <img class="img" src="img/product1.png" alt="blue tshirt">
-                        <h3 class="desc">blue tshirt</h3>
-                        <p class="price">$26</p>
-                    </li>
-                    <li class="products-list-item">
-                        <img class="img" src="img/product2.png" alt="woman shirt">
-                        <h3 class="desc">woman shirt</h3>
-                        <p class="price">$31</p>
-                    </li>
-                    <li class="products-list-item">
-                        <img class="img" src="img/product3.png" alt="yellow tshirt">
-                        <h3 class="desc">yellow tshirt</h3>
-                        <p class="price">$21</p>
-                    </li>
-                    <li class="products-list-item">
-                            <img class="img" src="img/product4.png" alt="cool lingerie">
-                            <h3 class="desc">cool lingerie</h3>
-                            <p class="price">$56</p>
-                    </li>
-                    <li class="products-list-item">
-                            <img class="img" src="img/product5.png" alt="blue tshirt">
+                        <div class="absolute">
                             <h3 class="desc">blue tshirt</h3>
                             <p class="price">$26</p>
+                        </div>
                     </li>
-                    <li class="products-list-item">
-                        <img class="img" src="img/product6..png" alt="woman shirt">
-                        <h3 class="desc">woman shirt</h3>
-                        <p class="price">$31</p>
+                    <li>
+                        <img class="img" src="img/product2.png" alt="woman shirt">
+                        <div class="absolute">
+                            <h3 class="desc">woman shirt</h3>
+                            <p class="price">$31</p>
+                        </div>
                     </li>
-                    <li class="products-list-item">
-                            <img class="img" src="img/product7.png" alt="yellow tshirt">
+                    <li>
+                        <img class="img" src="img/product3.png" alt="yellow tshirt">
+                        <div class="absolute">
                             <h3 class="desc">yellow tshirt</h3>
                             <p class="price">$21</p>
+                        </div>
                     </li>
-                    <li class="products-list-item">
+                    <li>
+                        <img class="img" src="img/product4.png" alt="cool lingerie">
+                        <div class="absolute">
+                            <h3 class="desc">cool lingerie</h3>
+                            <p class="price">$56</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img class="img" src="img/product5.png" alt="blue tshirt">
+                        <div class="absolute">
+                            <h3 class="desc">blue tshirt</h3>
+                            <p class="price">$26</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img class="img" src="img/product6..png" alt="woman shirt">
+                        <div class="absolute">
+                            <h3 class="desc">woman shirt</h3>
+                            <p class="price">$31</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img class="img" src="img/product7.png" alt="yellow tshirt">
+                        <div class="absolute">
+                            <h3 class="desc">yellow tshirt</h3>
+                            <p class="price">$21</p>
+                        </div>
+                    </li>
+                    <li>
                         <img class="img" src="img/product8.png" alt="cool lingerie">
-                        <h3 class="desc">cool lingerie</h3>
-                        <p class="price">$56</p>
+                        <div class="absolute">
+                            <h3 class="desc">cool lingerie</h3>
+                            <p class="price">$56</p>
+                        </div>
                     </li>
                 </ul>
             </section>
 
-<!--Footer-->
-            <footer class="footer">
-                <section class="blog">
+<!--Blog-->
+                <section class="blog clearfix">
                     <h2 class="news">latest news</h2>
-                    <ul class="blog_content" style="padding-left: 0px;">
+                    <ul>
                         <li class="blog-content-item">
-                            <img class="image" src="img/news1.png" alt="lorem">
-                            <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
-                            <button class="btn">Read More</button>
+                            <article class="content-news">
+                                <img class="image" src="img/news1.png" alt="lorem">
+                                <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                                <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
+                                <a href="#" class="btn">Read More</a>
+                            </article>
                         </li>
                         <li class="blog-content-item">
-                            <img class="image" src="img/news2.png" alt="lorem">
-                            <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
-                            <button class="btn">Read More</button>
+                                <article class="content-news">
+                                    <img class="image" src="img/news1.png" alt="lorem">
+                                    <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
+                                    <a href="#" class="btn">Read More</a>
+                                </article>
                         </li>
                         <li class="blog-content-item">
-                            <img class="image" src="img/news3.png" alt="lorem">
-                            <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
-                            <button class="btn">Read More</button>
+                                <article class="content-news">
+                                        <img class="image" src="img/news1.png" alt="lorem">
+                                        <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
+                                        <a href="#" class="btn">Read More</a>
+                                    </article>
                         </li>
                     </ul>
                 </section>
-            </footer>
-            
         </main>
     </div>
 </body>
-
 </html>
-
-  
