edited files: index.html and styles.css

--- a/module-04/hw-04/index.html
+++ b/module-04/hw-04/index.html
@@ -16,10 +16,8 @@
 
 <!--Header-->        
         <header class="header">
-            <nav class="navigation">
+            <nav class="navigation clearfix">
                 <a class="logo" href="a">mart</a>
-
-            <div class="navigate">
                 <ul class="clearfix">
                     <li class="features-list"><a class="link" href="#home" target="_self">home</a></li>
                     <li class="features-list"><a class="link" href="#about" target="_self">about us</a></li>
@@ -28,7 +26,6 @@
                     <li class="features-list"><a class="link" href="#blog" target="_self">blog</a></li>
                     <li class="features-list"><a class="link" href="#contact" target="_self">contact us</a></li>
                 </ul>
-            </div>
             </nav>
         </header>
 
@@ -38,56 +35,56 @@
                 <h2 class="products-title">featured products</h2>
                 <ul class="products-list clearfix">
                     <li>
-                        <img class="img" src="img/product1.png" alt="blue tshirt">
+                        <img class="img" src="img/product1.png" alt="blue tshirt" width="255px" height="322px">
                         <div class="absolute">
                             <h3 class="desc">blue tshirt</h3>
                             <p class="price">$26</p>
                         </div>
                     </li>
                     <li>
-                        <img class="img" src="img/product2.png" alt="woman shirt">
+                        <img class="img" src="img/product2.png" alt="woman shirt" width="255px" height="322px">
                         <div class="absolute">
                             <h3 class="desc">woman shirt</h3>
                             <p class="price">$31</p>
                         </div>
                     </li>
                     <li>
-                        <img class="img" src="img/product3.png" alt="yellow tshirt">
+                        <img class="img" src="img/product3.png" alt="yellow tshirt" width="255px" height="322px">
                         <div class="absolute">
                             <h3 class="desc">yellow tshirt</h3>
                             <p class="price">$21</p>
                         </div>
                     </li>
                     <li>
-                        <img class="img" src="img/product4.png" alt="cool lingerie">
+                        <img class="img" src="img/product4.png" alt="cool lingerie" width="255px" height="322px">
                         <div class="absolute">
                             <h3 class="desc">cool lingerie</h3>
                             <p class="price">$56</p>
                         </div>
                     </li>
                     <li>
-                        <img class="img" src="img/product5.png" alt="blue tshirt">
+                        <img class="img" src="img/product5.png" alt="blue tshirt" width="255px" height="322px">
                         <div class="absolute">
                             <h3 class="desc">blue tshirt</h3>
                             <p class="price">$26</p>
                         </div>
                     </li>
                     <li>
-                        <img class="img" src="img/product6..png" alt="woman shirt">
+                        <img class="img" src="img/product6..png" alt="woman shirt" width="255px" height="322px">
                         <div class="absolute">
                             <h3 class="desc">woman shirt</h3>
                             <p class="price">$31</p>
                         </div>
                     </li>
                     <li>
-                        <img class="img" src="img/product7.png" alt="yellow tshirt">
+                        <img class="img" src="img/product7.png" alt="yellow tshirt" width="255px" height="322px">
                         <div class="absolute">
                             <h3 class="desc">yellow tshirt</h3>
                             <p class="price">$21</p>
                         </div>
                     </li>
                     <li>
-                        <img class="img" src="img/product8.png" alt="cool lingerie">
+                        <img class="img" src="img/product8.png" alt="cool lingerie" width="255px" height="322px">
                         <div class="absolute">
                             <h3 class="desc">cool lingerie</h3>
                             <p class="price">$56</p>
@@ -97,12 +94,12 @@
             </section>
 
 <!--Blog-->
-                <section class="blog clearfix">
+                <section class="blog">
                     <h2 class="news">latest news</h2>
-                    <ul>
+                    <ul class="clearfix">
                         <li class="blog-content-item">
                             <article class="content-news">
-                                <img class="image" src="img/news1.png" alt="lorem">
+                                <img class="image" src="img/news1.png" alt="lorem" width="350px" height="252px">
                                 <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
                                 <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
                                 <a href="#" class="btn">Read More</a>
@@ -110,7 +107,7 @@
                         </li>
                         <li class="blog-content-item">
                                 <article class="content-news">
-                                    <img class="image" src="img/news1.png" alt="lorem">
+                                    <img class="image" src="img/news1.png" alt="lorem" width="350px" height="252px">
                                     <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
                                     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
                                     <a href="#" class="btn">Read More</a>
@@ -118,7 +115,7 @@
                         </li>
                         <li class="blog-content-item">
                                 <article class="content-news">
-                                        <img class="image" src="img/news1.png" alt="lorem">
+                                        <img class="image" src="img/news1.png" alt="lorem" width="350px" height="252px">
                                         <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
                                         <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
                                         <a href="#" class="btn">Read More</a>
