--- a/module-04/hw-04/index.html
+++ b/module-04/hw-04/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,22 +15,22 @@
 <body>
     <div class="container">
 
-<!--Header-->        
+        <!--Header-->
         <header class="header">
             <nav class="navigation clearfix">
                 <a class="logo" href="a">mart</a>
-                <ul class="clearfix">
-                    <li class="features-list"><a class="link" href="#home" target="_self">home</a></li>
-                    <li class="features-list"><a class="link" href="#about" target="_self">about us</a></li>
-                    <li class="features-list"><a class="link" href="#page" target="_self">page</a></li>
-                    <li class="features-list"><a class="link" href="#shop" target="_self">shop</a></li>
-                    <li class="features-list"><a class="link" href="#blog" target="_self">blog</a></li>
-                    <li class="features-list"><a class="link" href="#contact" target="_self">contact us</a></li>
+                <ul class="features-list clearfix">
+                    <li class="features-item"><a class="link" href="#home" target="_self">home</a></li>
+                    <li class="features-item"><a class="link" href="#about" target="_self">about us</a></li>
+                    <li class="features-item"><a class="link" href="#page" target="_self">page</a></li>
+                    <li class="features-item"><a class="link" href="#shop" target="_self">shop</a></li>
+                    <li class="features-item"><a class="link" href="#blog" target="_self">blog</a></li>
+                    <li class="features-item"><a class="link" href="#contact" target="_self">contact us</a></li>
                 </ul>
             </nav>
         </header>
 
-<!--Main-->
+        <!--Main-->
         <main class="content">
             <section class="products">
                 <h2 class="products-title">featured products</h2>
@@ -93,37 +94,44 @@
                 </ul>
             </section>
 
-<!--Blog-->
-                <section class="blog">
-                    <h2 class="news">latest news</h2>
-                    <ul class="clearfix">
-                        <li class="blog-content-item">
-                            <article class="content-news">
-                                <img class="image" src="img/news1.png" alt="lorem" width="350px" height="252px">
-                                <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                                <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
-                                <a href="#" class="btn">Read More</a>
-                            </article>
-                        </li>
-                        <li class="blog-content-item">
-                                <article class="content-news">
-                                    <img class="image" src="img/news1.png" alt="lorem" width="350px" height="252px">
-                                    <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
-                                    <a href="#" class="btn">Read More</a>
-                                </article>
-                        </li>
-                        <li class="blog-content-item">
-                                <article class="content-news">
-                                        <img class="image" src="img/news1.png" alt="lorem" width="350px" height="252px">
-                                        <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
-                                        <a href="#" class="btn">Read More</a>
-                                    </article>
-                        </li>
-                    </ul>
-                </section>
+            <!--Blog-->
+            <section class="blog">
+                <h2 class="news">latest news</h2>
+                <ul class="clearfix">
+                    <li class="blog-content-item">
+                        <article class="content-news">
+                            <img class="image" src="img/news1.png" alt="lorem" width="350px" height="252px">
+                            <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+                                minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam
+                                voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
+                            <a href="#" class="btn">Read More</a>
+                        </article>
+                    </li>
+                    <li class="blog-content-item">
+                        <article class="content-news">
+                            <img class="image" src="img/news1.png" alt="lorem" width="350px" height="252px">
+                            <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+                                minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam
+                                voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
+                            <a href="#" class="btn">Read More</a>
+                        </article>
+                    </li>
+                    <li class="blog-content-item">
+                        <article class="content-news">
+                            <img class="image" src="img/news1.png" alt="lorem" width="350px" height="252px">
+                            <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+                                minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam
+                                voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
+                            <a href="#" class="btn">Read More</a>
+                        </article>
+                    </li>
+                </ul>
+            </section>
         </main>
     </div>
 </body>
+
 </html>
