--- a/module-04/hw-04/index.html
+++ b/module-04/hw-04/index.html
@@ -17,7 +17,7 @@
 
         <!--Header-->
         <header class="header">
-            <nav class="navigation clearfix">
+            <nav class="navigation">
                 <a class="logo" href="a">mart</a>
                 <ul class="features-list clearfix">
                     <li class="features-item"><a class="link" href="#home" target="_self">home</a></li>
@@ -36,56 +36,56 @@
                 <h2 class="products-title">featured products</h2>
                 <ul class="products-list clearfix">
                     <li>
-                        <img class="img" src="img/product1.png" alt="blue tshirt" width="255px" height="322px">
+                        <img class="img" src="img/product1.png" alt="blue tshirt" width="255" height="322">
                         <div class="absolute">
                             <h3 class="desc">blue tshirt</h3>
                             <p class="price">$26</p>
                         </div>
                     </li>
                     <li>
-                        <img class="img" src="img/product2.png" alt="woman shirt" width="255px" height="322px">
+                        <img class="img" src="img/product2.png" alt="woman shirt" width="255" height="322">
                         <div class="absolute">
                             <h3 class="desc">woman shirt</h3>
                             <p class="price">$31</p>
                         </div>
                     </li>
                     <li>
-                        <img class="img" src="img/product3.png" alt="yellow tshirt" width="255px" height="322px">
+                        <img class="img" src="img/product3.png" alt="yellow tshirt" width="255" height="322">
                         <div class="absolute">
                             <h3 class="desc">yellow tshirt</h3>
                             <p class="price">$21</p>
                         </div>
                     </li>
                     <li>
-                        <img class="img" src="img/product4.png" alt="cool lingerie" width="255px" height="322px">
+                        <img class="img" src="img/product4.png" alt="cool lingerie" width="255" height="322">
                         <div class="absolute">
                             <h3 class="desc">cool lingerie</h3>
                             <p class="price">$56</p>
                         </div>
                     </li>
                     <li>
-                        <img class="img" src="img/product5.png" alt="blue tshirt" width="255px" height="322px">
+                        <img class="img" src="img/product5.png" alt="blue tshirt" width="255" height="322">
                         <div class="absolute">
                             <h3 class="desc">blue tshirt</h3>
                             <p class="price">$26</p>
                         </div>
                     </li>
                     <li>
-                        <img class="img" src="img/product6..png" alt="woman shirt" width="255px" height="322px">
+                        <img class="img" src="img/product6..png" alt="woman shirt" width="255" height="322">
                         <div class="absolute">
                             <h3 class="desc">woman shirt</h3>
                             <p class="price">$31</p>
                         </div>
                     </li>
                     <li>
-                        <img class="img" src="img/product7.png" alt="yellow tshirt" width="255px" height="322px">
+                        <img class="img" src="img/product7.png" alt="yellow tshirt" width="255" height="322">
                         <div class="absolute">
                             <h3 class="desc">yellow tshirt</h3>
                             <p class="price">$21</p>
                         </div>
                     </li>
                     <li>
-                        <img class="img" src="img/product8.png" alt="cool lingerie" width="255px" height="322px">
+                        <img class="img" src="img/product8.png" alt="cool lingerie" width="255" height="322">
                         <div class="absolute">
                             <h3 class="desc">cool lingerie</h3>
                             <p class="price">$56</p>
@@ -100,7 +100,7 @@
                 <ul class="clearfix">
                     <li class="blog-content-item">
                         <article class="content-news">
-                            <img class="image" src="img/news1.png" alt="lorem" width="350px" height="252px">
+                            <img class="image" src="img/news1.png" alt="lorem" width="350" height="252">
                             <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
                             <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
                                 minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam
@@ -110,7 +110,7 @@
                     </li>
                     <li class="blog-content-item">
                         <article class="content-news">
-                            <img class="image" src="img/news1.png" alt="lorem" width="350px" height="252px">
+                            <img class="image" src="img/news1.png" alt="lorem" width="350" height="252">
                             <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
                             <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
                                 minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam
@@ -120,7 +120,7 @@
                     </li>
                     <li class="blog-content-item">
                         <article class="content-news">
-                            <img class="image" src="img/news1.png" alt="lorem" width="350px" height="252px">
+                            <img class="image" src="img/news1.png" alt="lorem" width="350" height="252">
                             <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
                             <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
                                 minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam
