added new photos and class clearfix to nav

--- a/module-04/hw-04/index.html
+++ b/module-04/hw-04/index.html
@@ -17,7 +17,7 @@
 
         <!--Header-->
         <header class="header">
-            <nav class="navigation">
+            <nav class="navigation clearfix">
                 <a class="logo" href="a">mart</a>
                 <ul class="features-list clearfix">
                     <li class="features-item"><a class="link" href="#home" target="_self">home</a></li>
@@ -110,7 +110,7 @@
                     </li>
                     <li class="blog-content-item">
                         <article class="content-news">
-                            <img class="image" src="img/news1.png" alt="lorem" width="350" height="252">
+                            <img class="image" src="img/news2.png" alt="lorem" width="350" height="252">
                             <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
                             <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
                                 minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam
@@ -120,7 +120,7 @@
                     </li>
                     <li class="blog-content-item">
                         <article class="content-news">
-                            <img class="image" src="img/news1.png" alt="lorem" width="350" height="252">
+                            <img class="image" src="img/news3.png" alt="lorem" width="350" height="252">
                             <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
                             <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
                                 minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam
