files:index.html and styles.css were edited

--- a/module-04/hw-04/index.html
+++ b/module-04/hw-04/index.html
@@ -15,7 +15,6 @@
 <body>
     <div class="container">
 
-        <!--Header-->
         <header class="header">
             <nav class="navigation clearfix">
                 <a class="logo" href="a">mart</a>
@@ -30,105 +29,93 @@
             </nav>
         </header>
 
-        <!--Main-->
+        <h1 class="visually-hidden">omg...</h1>
+
+        <div class="slider">
+            <button class="slider-ctrl prev"><img src="img/left-arrow.png" alt="left"></button>
+            <button class="slider-ctrl next"><img src="img/right-arrow.png" alt="right"></button>
+
+            <ul class="slides">
+                <li class="slides-item">
+                    <img class="slides-image" src="img/pic.png" alt="slider photo" width="1600" height="600">
+                    <p class="slides-descr">affordable paris tours</p>
+                    <p class="slides-descr sub">city tours/tour tickets/tour guides</p>
+                </li>
+            </ul>
+        </div>
+
         <main class="content">
             <section class="products">
-                <h2 class="products-title">featured products</h2>
+                <h2 class="products-title">new collection</h2>
                 <ul class="products-list clearfix">
                     <li>
-                        <img class="img" src="img/product1.png" alt="blue tshirt" width="255" height="322">
+                        <div class="card">
+                            <div class="overlay">
+                                <button class="socialkey heart"><img src="img/like.png" alt=""></button>
+                                <button class="socialkey shaffle"><img src="img/shaffle.png" alt=""></button>
+                                <button class="socialkey clock"><img src="img/time.png" alt=""></button>
+                                <button class="socialkey cart"><img src="img/add-to-cart.png" alt=""></button>
+                            </div>
+                            <img class="img" src="img/pic1.gif" alt="blue tshirt" width="255" height="322">
+                        </div>
                         <div class="absolute">
                             <h3 class="desc">blue tshirt</h3>
                             <p class="price">$26</p>
                         </div>
                     </li>
                     <li>
-                        <img class="img" src="img/product2.png" alt="woman shirt" width="255" height="322">
+                        <div class="card">
+                            <div class="overlay">
+                                <button class="socialkey heart"><img src="img/like.png" alt=""></button>
+                                <button class="socialkey shaffle"><img src="img/shaffle.png" alt=""></button>
+                                <button class="socialkey clock"><img src="img/time.png" alt=""></button>
+                                <button class="socialkey cart"><img src="img/add-to-cart.png" alt=""></button>
+                            </div>
+                            <img class="img" src="img/pic2.gif" alt="blue tshirt" width="255" height="322">
+                        </div>
                         <div class="absolute">
                             <h3 class="desc">woman shirt</h3>
                             <p class="price">$31</p>
                         </div>
                     </li>
                     <li>
-                        <img class="img" src="img/product3.png" alt="yellow tshirt" width="255" height="322">
+                        <div class="card">
+                            <div class="overlay">
+                                <button class="socialkey heart"><img src="img/like.png" alt=""></button>
+                                <button class="socialkey shaffle"><img src="img/shaffle.png" alt=""></button>
+                                <button class="socialkey clock"><img src="img/time.png" alt=""></button>
+                                <button class="socialkey cart"><img src="img/add-to-cart.png" alt=""></button>
+                            </div>
+                            <img class="img" src="img/pic3.gif" alt="blue tshirt" width="255" height="322">
+                        </div>
+
                         <div class="absolute">
                             <h3 class="desc">yellow tshirt</h3>
                             <p class="price">$21</p>
                         </div>
                     </li>
                     <li>
-                        <img class="img" src="img/product4.png" alt="cool lingerie" width="255" height="322">
+                        <div class="card">
+                            <div class="overlay">
+                                <button class="socialkey heart"><img src="img/like.png" alt=""></button>
+                                <button class="socialkey shaffle"><img src="img/shaffle.png" alt=""></button>
+                                <button class="socialkey clock"><img src="img/time.png" alt=""></button>
+                                <button class="socialkey cart"><img src="img/add-to-cart.png" alt=""></button>
+                            </div>
+                            <img class="img" src="img/pic4.gif" alt="blue tshirt" width="255" height="322">
+                        </div>
                         <div class="absolute">
                             <h3 class="desc">cool lingerie</h3>
                             <p class="price">$56</p>
                         </div>
                     </li>
-                    <li>
-                        <img class="img" src="img/product5.png" alt="blue tshirt" width="255" height="322">
-                        <div class="absolute">
-                            <h3 class="desc">blue tshirt</h3>
-                            <p class="price">$26</p>
-                        </div>
-                    </li>
-                    <li>
-                        <img class="img" src="img/product6..png" alt="woman shirt" width="255" height="322">
-                        <div class="absolute">
-                            <h3 class="desc">woman shirt</h3>
-                            <p class="price">$31</p>
-                        </div>
-                    </li>
-                    <li>
-                        <img class="img" src="img/product7.png" alt="yellow tshirt" width="255" height="322">
-                        <div class="absolute">
-                            <h3 class="desc">yellow tshirt</h3>
-                            <p class="price">$21</p>
-                        </div>
-                    </li>
-                    <li>
-                        <img class="img" src="img/product8.png" alt="cool lingerie" width="255" height="322">
-                        <div class="absolute">
-                            <h3 class="desc">cool lingerie</h3>
-                            <p class="price">$56</p>
-                        </div>
-                    </li>
-                </ul>
             </section>
 
-            <!--Blog-->
-            <section class="blog">
-                <h2 class="news">latest news</h2>
-                <ul class="clearfix">
-                    <li class="blog-content-item">
-                        <article class="content-news">
-                            <img class="image" src="img/news1.png" alt="lorem" width="350" height="252">
-                            <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
-                                minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam
-                                voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
-                            <a href="#" class="btn">Read More</a>
-                        </article>
-                    </li>
-                    <li class="blog-content-item">
-                        <article class="content-news">
-                            <img class="image" src="img/news2.png" alt="lorem" width="350" height="252">
-                            <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
-                                minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam
-                                voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
-                            <a href="#" class="btn">Read More</a>
-                        </article>
-                    </li>
-                    <li class="blog-content-item">
-                        <article class="content-news">
-                            <img class="image" src="img/news3.png" alt="lorem" width="350" height="252">
-                            <h3 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
-                                minima aspernatur soluta. Eaque, numquam! Cum neque mollitia quasi esse veniam
-                                voluptatem eos tempore ducimus, voluptates illum, exercitationem at officia magnam.</p>
-                            <a href="#" class="btn">Read More</a>
-                        </article>
-                    </li>
-                </ul>
+            <section class="footer">
+                <p class="paragraph">
+                    All rights reserved &copy; Dokan | Designed
+                </p>
+                <a class="citelink" href="#" target="_self">ThemenGraph</a>
             </section>
         </main>
     </div>
