deleted goit-fe-course folder

--- a/module-05/hw-05/index.html
+++ b/module-05/hw-05/index.html
@@ -18,11 +18,11 @@
         <!--Header-->
 
         <header class="header">
-            <nav class="navigation">
+            <nav class="nav clearfix">
                 <h1 class="site-logo"><a class="logo" href="a">MART</a></h1>
 
 
-                <ul class="navigate">
+                <ul class="navigation clearfix">
                     <li class="features-list"><a class="link" href="#home" target="_self">home</a></li>
                     <li class="features-list"><a class="link" href="#about" target="_self">about us</a></li>
                     <li class="features-list"><a class="link" href="#page" target="_self">page</a></li>
@@ -36,19 +36,19 @@
 
         <!--Slider-->
 
-    <div class="slider">
-        <img class="slider-img" src="img/pic.png" alt="slider image">
+        <div class="slider">
+            <img class="slider-img" src="img/pic.png" alt="slider image">
             <button class="slider-ctrl slider-ctrl-prev">
                 <img class="img-ctrl-prev" src="img/left-arrow.png" alt="preview">
             </button>
-        <p class="slider-main-content">affordable paris tours</p>
-        <p class="slider-main-content-item">city tours / tour tickets / tour guides</p>
+            <p class="slider-main-content">affordable paris tours</p>
+            <p class="slider-main-content-item">city tours / tour tickets / tour guides</p>
             <button class="slider-ctrl slider-ctrl-next">
                 <img class="img-ctrl-next" src="img/right-arrow.png" alt="next">
             </button>
-    </div>
+        </div>
 
-<!--Main-->
+        <!--Main-->
         <main class="content">
             <section class="main-collection">
                 <h2 class="collection">new collection</h2>
@@ -62,9 +62,9 @@
                                 <img class="add-to-cart" src="img/add-to-cart.png" alt="add-to-cart">
                             </div>
                         </div>
-                            <img class="img" src="img/pic1.gif" alt="blue tshirt">
-                            <h3 class="desc">blue tshirt</h3>
-                            <p class="price">$26</p>
+                        <img class="img" src="img/pic1.gif" alt="blue tshirt">
+                        <h3 class="desc">blue tshirt</h3>
+                        <p class="price">$26</p>
                     </li>
                     <li class="products-list-item">
                         <div class="card">
@@ -108,13 +108,14 @@
                 </ul>
             </section>
 
-<!-- Footer -->
+            <!-- Footer -->
 
             <footer class="footer">
                 <p class="rights">All Rights Reserved &copy; Dokan | Designed</p>
-                <p class="company">ThemenGraph</p>
+                <a href="#" class="company">ThemenGraph</a>
             </footer>
         </main>
     </div>
 </body>
+
 </html>
