--- a/module-06/hw-06/index.html
+++ b/module-06/hw-06/index.html
@@ -1,79 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Homework-06</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300i" rel="stylesheet">
 </head>
+
 <body>
-    <header class="main-header">
-        <h1 class="logo">
-            MoGo
-        </h1>
-        <nav class="navigation">
-            <ul class="navigation-list">
-                <li class="navigation-list-item">
-                    <a class="link-list-item" href="#">about</a>
-                </li>
-                <li class="navigation-list-item">
-                    <a class="link-list-item" href="#">service</a>
-                </li>
-                <li class="navigation-list-item">
-                    <a class="link-list-item" href="#">work</a>
-                </li>
-                <li class="navigation-list-item">
-                    <a class="link-list-item" href="#">blog</a>
-                </li>
-                <li class="navigation-list-item">
-                    <a class="link-list-item" href="#">contact</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <div class="container">
+        <header class="main-header">
+            <h1 class="logo">
+                MoGo
+            </h1>
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-list-item">
+                        <a class="link" href="#">about</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a class="link" href="#">service</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a class="link" href="#">work</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a class="link" href="#">blog</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a class="link" href="#">contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+    </div>
     <main class="main-content">
         <section class="service">
-            <h2></h2>
+            <h2 class="main-service-heading-a">we work with</h2>
+            <h2 class="main-service-heading-b">amazing services</h2>
             <ul class="service-list">
                 <li class="service-list-item">
-                    <img class="service-image" src="" alt="">
-                    <h3 class="service-heading"></h3>
-                    <p class="service-paragraph"></p>
+                    <img class="service-image" src="img/alarm.png" alt="alarm">
+                    <h3 class="service-heading">photography</h3>
+                    <p class="service-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                        mollitia aut fugit natus eligendi?</p>
                 </li>
                 <li class="service-list-item">
-                    <img class="service-image" src="" alt="">
-                    <h3 class="service-heading"></h3>
-                    <p class="service-paragraph"></p>
+                    <img class="service-image" src="img/line-graph.png" alt="line-graph">
+                    <h3 class="service-heading">web design</h3>
+                    <p class="service-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                        mollitia aut fugit natus eligendi?</p>
                 </li>
                 <li class="service-list-item">
-                    <img class="service-image" src="" alt="">
-                    <h3 class="service-heading"></h3>
-                    <p class="service-paragraph"></p>
+                    <img class="service-image" src="img/computer-ok.png" alt="computer/ok">
+                    <h3 class="service-heading">creativity</h3>
+                    <p class="service-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                        mollitia aut fugit natus eligendi?</p>
                 </li>
                 <li class="service-list-item">
-                    <img class="service-image" src="" alt="">
-                    <h3 class="service-heading"></h3>
-                    <p class="service-paragraph"></p>
+                    <img class="service-image" src="img/book2.png" alt="book">
+                    <h3 class="service-heading">seo</h3>
+                    <p class="service-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                        mollitia aut fugit natus eligendi?</p>
                 </li>
                 <li class="service-list-item">
-                    <img class="service-image" src="" alt="">
-                    <h3 class="service-heading"></h3>
-                    <p class="service-paragraph"></p>
+                    <img class="service-image" src="img/home.png" alt="home">
+                    <h3 class="service-heading">css/html</h3>
+                    <p class="service-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                        mollitia aut fugit natus eligendi?</p>
                 </li>
                 <li class="service-list-item">
-                    <img class="service-image" src="" alt="">
-                    <h3 class="service-heading"></h3>
-                    <p class="service-paragraph"></p>
+                    <img class="service-image" src="img/image.png" alt="image">
+                    <h3 class="service-heading">digital</h3>
+                    <p class="service-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                        mollitia aut fugit natus eligendi?</p>
                 </li>
             </ul>
         </section>
         <section class="team">
-            <h2 class="team-heading"></h2>
-            <p class="team-paragraph"></p>
+            <h2 class="team-heading">who we are</h2>
+            <h2 class="team-heading-a">meet our team</h2>
             <ul class="team-list">
-                <li class="team-list-item"></li>
-                <li class="team-list-item"></li>
-                <li class="team-list-item"></li>
+                <li class="team-list-item">
+
+                </li>
+                <li class="team-list-item">
+
+                </li>
+                <li class="team-list-item">
+
+                </li>
             </ul>
         </section>
         <footer class="main-footer">
@@ -83,4 +107,5 @@
         </footer>
     </main>
 </body>
+
 </html>
